Bug 231029 - kmymoney4 hangs after opening file
Summary: kmymoney4 hangs after opening file
Status: CLOSED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-16 21:43 UTC by Ian Neal
Modified: 2010-03-27 15:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Bzipped2 of anonymised version of main file (647.43 KB, application/x-bzip2)
2010-03-16 21:52 UTC, Ian Neal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Neal 2010-03-16 21:43:20 UTC
Version:           3.96.1 (using KDE 4.4.0)
Compiler:          gcc 4.4.1 
OS:                Linux
Installed from:    Fedora RPMs

Using latest svn build when I try and open my main kmymoney file it reaches 100%, then starts from the beginning again but showing 100% still. The bar progresses about 1/5 away along and then kmymoney hangs. At the bottom right it says "Loading currencies..."
I do have custom reports, but deleting those, in kmymoney2, makes no difference when opening in kmymoney4.
Comment 1 Alvaro Soliverez 2010-03-16 21:52:31 UTC
First of all, reinstall from scratch. 

Then, you can try this. I don't think it will work because it's when loading the currencies, but it's worth a shot. Open KMM with the -n option, go to configure and deactivate everything on the home page, and then try to load again. If it works, activate one by one to find the guilty component.
Comment 2 Ian Neal 2010-03-16 21:52:31 UTC
Created attachment 41699 [details]
Bzipped2 of anonymised version of main file

Bzipped2 version of file which demonstrates the issue.
Comment 3 Ian Neal 2010-03-16 22:10:19 UTC
(In reply to comment #1)
> First of all, reinstall from scratch. 
> 
> Then, you can try this. I don't think it will work because it's when loading
> the currencies, but it's worth a shot. Open KMM with the -n option, go to
> configure and deactivate everything on the home page, and then try to load
> again. If it works, activate one by one to find the guilty component.

The Payments one causes the issue. Unchecking the component means everything works, starting up without it checked works, but as soon as I check it, the app hangs.
Comment 4 Ian Neal 2010-03-16 22:24:15 UTC
Forecast (scheduled) also causes it to hang.
Comment 5 Alvaro Soliverez 2010-03-17 00:16:43 UTC
The problem is when it loads the schedules. SCH000042 seems to make the app get into a loop, but I can't find anything wrong with other than it being a one-time payment.
Comment 6 Ian Neal 2010-03-17 01:36:04 UTC
(In reply to comment #5)
> The problem is when it loads the schedules. SCH000042 seems to make the app get
> into a loop, but I can't find anything wrong with other than it being a
> one-time payment.

It's a scheduled payment that has finished, but it's final payment date is in the future (2010-04-01) and has already been entered into the ledger. (On a side note, scheduled transactions that have finished do not get their amounts made anonymous).
Comment 7 Thomas Baumgart 2010-03-17 08:02:20 UTC
On a side note: I am working on the anonimization fixes already.
Comment 8 Ian Neal 2010-03-18 00:33:52 UTC
I've checked builds back as far as 3rd Jan 2010 and have the same issue with all of them, so it's not a recent change that has caused it. I suppose I could try changing the date on my computer and see what happens with that.
Comment 9 Thomas Baumgart 2010-03-20 16:53:23 UTC
SVN commit 1105565 by tbaumgart:

Prevent some endless loops with schedules that are already finished.

BUG: 231029

 M  +5 -0      mymoneyforecast.cpp  
 M  +5 -5      mymoneyscheduled.cpp  
 M  +43 -0     mymoneyscheduletest.cpp  
 M  +2 -0      mymoneyscheduletest.h  
 M  +1 -1      storage/mymoneyseqaccessmgr.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1105565
Comment 10 Ian Neal 2010-03-20 20:05:26 UTC
Verified that it fixes my issue with latest svn build.