Prevent some endless loops with schedules that are already finished.

BUG: 231029

svn path=/trunk/playground/office/kmymoney/; revision=1105565