kmymoney/mymoney/mymoneyscheduletest.h
@@ -60,6 +60,7 @@ class MyMoneyScheduleTest : public CppUnit::TestFixture
   CPPUNIT_TEST(testOccurrencePeriod);
   CPPUNIT_TEST(testSimpleToFromCompoundOccurrence);
   CPPUNIT_TEST(testProcessingDates);
+  CPPUNIT_TEST(testPaidEarlyOneTime);
   CPPUNIT_TEST_SUITE_END();
 
 protected:
@@ -102,6 +103,7 @@ public:
   void testOccurrencePeriod();
   void testSimpleToFromCompoundOccurrence();
   void testProcessingDates();
+  void testPaidEarlyOneTime();
 };
 
 #endif
